# open-portfolio

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
cases/case01/: README.md
cases/case01/sql/: 01_select_seed_movie.sql  02_cooccurrence.sql  03_genre_profile.sql  04_top_tags_by_genre.sql  05_feature_movie_list.sql
cases/case02/: README.md
cases/case02/notebooks/: 01_EDA_repeat_vs_nonrepeat.ipynb
cases/case02/sql/: 01_mart_customer_purchase_features.sql
cases/case03/: README.md
cases/case03/notebooks/: 01_EDA.ipynb  02_modeling.ipynb
cases/case03/reports/: 01_campaign_response_prioritization.pptx
docker/: .dockerignore  Dockerfile
src/datatools/: preprocessing.py
tests/: test_preprocessing.py
